<resources>
    <string name="login">user/login</string>
    <string name="is_logued">user/islogued</string>
    <string name="logout">user/logout</string>
    <string name="registry">user/register</string>
    <string name="update">user/update</string>
    <string name="getaddress">address/byuser</string>
    <string name="deladdress">address/delete</string>
    <string name="addaddress">address/create</string>
    <string name="cancel_service">v2/user/%1$s/cancelservice</string>
    <string name="cancel_service_system">service/systemcancel</string>
    <string name="request_service">v2/user/%1$s/requestservice</string>
    <string name="enable_internet">Please enable an Internet connection</string>
    <string name="request_service_address">v2/user/%1$s/requestservice_address</string>
    <string name="getlatlngaddress">http://maps.googleapis.com/maps/api/geocode/json?</string>
    <string name="checkstatuservice">service/status</string>
    <string name="services_user">service/user</string>
    <string name="finish_schedule">schedule/finish</string>
    <string name="reclamo">complain/create</string>
    <string name="calificar">service/score</string>
    <string name="agend">schedule/create</string>
    <string name="myanged">schedule/user</string>
    <string name="cancel_schedule">schedule/cancel</string>
    <string name="driver">driver/view</string>
    <string name="resetpass">forgotten</string>
    <string name="code_pass">user/pwd/confirm</string>
    <string name="app_versions">app/versions</string>
    <string name="error_load_driver">Error loading driver details</string>
    <string name="error_cancel_service">There was an error cancelling the service</string>
    <string name="error_load_address">There was an error loading addresses</string>
    <string name="error_no_driver">At the moment there are no drivers available</string>
    <string name="error_no_procc">Could not process the request\n try again</string>
    <string name="error_load_services">There was an error loading history</string>
    <string name="error_q_service">There was an error rating the service</string>
    <string name="app_name">Taxisya</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_calificar">Rate</string>
    <string name="selecciona">Choose</string>
    <string name="title_activity_reclamo">Claim</string>
    <string name="title_activity_end_agendamiento">EndAgendamiento</string>
    <string name="textimageview">link</string>
    <string name="aceptar">Accept</string>
    <string name="service_in_curse">Service in progress</string>
    <string name="you_position">Your current position</string>
    <string name="noaddres">You have no addresses!</string>
    <string name="cancel">cancel</string>
    <string name="retry">retry</string>
    <string name="nocancel">No service has been canceled!</string>
    <string name="getdriverinfo">There was an error loading data driver</string>
    <string name="no_update_services">Update Google Play Services</string>
    <string name="user_exist">The email entered %1$s is already registered, please login to enter</string>
    <string name="registry_error">There was an error processing registration</string>
    <string name="update_error">There was an error updating the registry</string>
    <string name="close_session_error">There was an error logging out</string>
    <string name="update_ok">The data were updated successfully!</string>
    <string name="error_net">There was an error with your connection, try again!</string>
    <string name="error_speed">Your internet connection speed has problems!</string>
    <string name="error_position">It was not possible to obtain your location, wait a few seconds and try again!</string>
    <string name="important">Important</string>
    <string name="last_15_minutes">Missing 15 minutes will inform the plates of the vehicle that will be at the requested time!</string>
    <string name="thank_r">Thank you! We have received your information.</string>
    <string name="error_login">Username or password incorrect</string>
    <string name="enable_gps">Please enable your GPS.</string>
    <string name="enviando">Sending...</string>
    <string name="type_code">Enter the confirmation code sent to your email so you can enter the new password</string>
    <string name="servicio_cancelado">The service was canceled</string>
    <string name="servicio_cancelado_sistema">The service was canceled by the system</string>
    <string name="servicio_cancelado_conductor">The service was canceled by the driver</string>
    <string name="servicio_cancelado_operadora">The service was canceled by the operator</string>
    <string name="network_connectivity_message">Checking</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="dir1">Ex:91b</string>
    <string name="dir2">Ex:65a</string>
    <string name="has">#</string>
    <string name="guion">-</string>
    <string name="dir3">Ex:40</string>
    <string name="obs">Ex:Apt 201/House</string>
    <string name="block">Neighborhood</string>
    <string name="tu_e_mail_correo_electr_nico_">E-mail</string>
    <string name="tu_contrase_a">Password</string>
    <string name="perfil_contrase_a">Change Password</string>
    <string name="_16">16</string>
    <string name="placa_">"Plate: "</string>
    <string name="marca_">"Brand: "</string>
    <string name="tu_nombre_y_apellido">Full name</string>
    <string name="tu_n_mero_celular">Phone</string>
    <string name="nombre">name</string>
    <string name="placa">plate</string>
    <string name="sd">Looking address...</string>
    <string name="sd2">Select address</string>
    <string name="title_activity_reset_pass">ResetPass</string>
    <string name="recuperar_contrase_a">Recover password</string>
    <string name="digita_tu_direcci_n_de_correo">Enter your email</string>
    <string name="codigo_de_confirmaci_n">Confirmation code</string>
    <string name="se_ha_enviado_a_tu_correo_electronico_un_codigo_de_confirmaci_n">It has been sent to your email a confirmation code</string>
    <string name="olvidate_la_contrase_a_">Forgot your password?</string>
    <string name="digita_nueva_contrase_a">Enter new password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="verificando">Verifying...</string>
    <string name="button_app_version">Update now</string>
    <string name="title_app_version">Update available</string>
    <string name="message_app_version">A new version of Taxisya available; this version is no longer supported. To continue you must update the application</string>
    <string name="new_name_hint">Name</string>
    <string name="new_address_hint">Address</string>
    <string name="new_detail_hint">Want to add a comment?</string>
    <string name="btn_new_address">Add to my address</string>
    <string name="street_prompt">Choose</string>
    <string-array name="street_type">
        <item>Calle</item>
        <item>Carrera</item>
        <item>Transversal</item>
        <item>Avenida</item>
        <item>Diagonal</item>
    </string-array>
    <string name="set_agendado_aeropuerto">Airport</string>
    <string name="set_agendado_fuera_bogota">Out of the city</string>
    <string name="set_agendado_mensajeria">Messaging</string>
    <string name="set_agendado_servicio_horas">Service for hours</string>
    <string name="title_activity_new_address">NewAddressActivity</string>
    <string name="title_activity_my_addresses">MyAddressesActivity</string>
    <string name="title_activity_map_new_address">MapNewAddressActivity</string>
    <string name="text_ok">OK</string>
    <string name="servicio_agendado_correctamente">Properly scheduled service</string>
    <string name="informacion_importante">Important information</string>
    <string name="text_aceptar">Accept</string>
    <string name="hint_ejemplo_fuera_bogota">"Example: Florida, US "</string>
    <string name="hint_ejemplo_direccion">Example: Street 1 402</string>
    <string name="aviso_verifica_datos_agendamiento">Check Scheduling data</string>
    <string name="aviso_verifica_datos_del_agendamiento">Check Scheduling data</string>
    <string name="aviso_selecciona_motivo_agendamiento">Select the schedule option</string>
    <string name="aviso_no_puedes_agendar_antes_24_horas">You can not schedule after 24 hours</string>
    <string name="aviso_momento_agendamiento_pasado">Scheduling time has already passed</string>
    <string name="aviso_puedes_realizar_agendamiento_una_hora">You can schedule at least one hour before and up to 24 hours</string>
    <string name="title_agendando_servicio">Scheduling a Service...</string>
    <string name="title_informacion_importante_2">Important information</string>
    <string name="title_informacion">Information</string>
    <string name="mensaje_servicio_tomado">The service has been taken on a different device with its user. This device is disabled</string>
    <string name="text_si">Yes</string>
    <string name="text_no">No</string>
    <string name="title_cancelando_servicio">Canceling service...</string>
    <string name="aviso_cancelacion_servicio_por_conductor">Service canceled by driver</string>
    <string name="enviando_calificacion">Rated sending...</string>
    <string name="title_cargando_historial">Loading history...</string>
    <string name="text_dia_dom">Sun</string>
    <string name="text_dia_lun">Mon</string>
    <string name="text_dia_mar">Tue</string>
    <string name="text_dia_mie">Wed</string>
    <string name="text_dia_sab">Sat</string>
    <string name="text_mes_feb">feb</string>
    <string name="text_mes_mar">mar</string>
    <string name="text_mes_abr">apr</string>
    <string name="text_mes_may">may</string>
    <string name="text_mes_jun">jun</string>
    <string name="text_mes_jul">jul</string>
    <string name="text_mes_ago">aug</string>
    <string name="text_mes_sep">sept</string>
    <string name="text_mes_oct">oct</string>
    <string name="text_mes_nov">nov</string>
    <string name="text_mes_dic">dec</string>
    <string name="text_autenticando">Authenticating...</string>
    <string name="titulo_cargando_agendamientos">Loading Scheduling...</string>
    <string name="text_agregar">Add</string>
    <string name="titulo_cierre_sesion">Close session</string>
    <string name="confirmacion_seguro_cierra_sesion">Are you sure to logout?</string>
    <string name="mensaje_cerrando_sesion">Signing off...</string>
    <string name="mensaje_session_cerrada_con_exito">Successfully closed session</string>
    <string name="mensaje_erro_cerrando_sesion">There was an error logging out</string>
    <string name="text_btn_si">Yes</string>
    <string name="text_btn_no">No</string>
    <string name="text_actualizando">Updating...</string>
    <string name="text_enviando_informacion">Sending information...</string>
    <string name="texto_registrando">Registering...</string>
    <string name="text_escribe_email">Enter your email address</string>
    <string name="texto_usuario_no_existe">This user does not exist!</string>
    <string name="titulo_agendar_title_1">Rate</string>
    <string name="titulo_agendar_title_2">Service</string>
    <string name="titulo_agendar_agradecimiento">Thank you for using our services</string>
    <string name="titulo_agendar_por_favor_calificar">Please rate your driver</string>
    <string name="text_ciudad_destino">Destination</string>
    <string name="pay_type_title">Payment Type</string>
    <string name="pay_type1">Cash</string>
    <string name="pay_type2">Credit card</string>
    <string name="pay_type3">Ticket</string>
    <string name="ticket_data">Input data of ticket</string>
    <string name="titulo_tipo_calificacion">siendo 5 la calificación mas alta</string>
    <string name="btn_ask">Solicitar</string>
</resources>