<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:map="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="bottom"
              android:background="@android:color/white"
              android:orientation="vertical">

            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/circle"
                android:drawableLeft="@drawable/draw2left"
                android:elevation="4dp"
                android:gravity="center_vertical"
                android:hint="@string/new_address_hint"
                android:imeOptions="actionDone"
                android:inputType="textImeMultiLine"
                android:paddingLeft="4dp"
                android:singleLine="true"
                android:textColor="@color/edit_color" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true"
            map:cameraTargetLat="4.597317"
            map:cameraTargetLng="-74.077098" />

        <ImageView
            android:id="@+id/ivMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/pointer" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:background="@color/disabled_transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/ticketValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/ticket_data"
                android:textColorHint="@color/black"
                android:maxLength="7"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pay_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/pay_type_title"
                android:textColor="@android:color/black" />

            <info.hoang8f.android.segmented.SegmentedGroup
                xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/segmented3"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                segmentedgroup:sc_border_width="2dp"
                segmentedgroup:sc_corner_radius="0dp">

                <RadioButton
                    android:id="@+id/payType1"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/pay_type1" />

                <RadioButton
                    android:id="@+id/payType2"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/pay_type2" />

                <RadioButton
                    android:id="@+id/payType3"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/pay_type3" />


            </info.hoang8f.android.segmented.SegmentedGroup>


        </LinearLayout>


        <EditText
            android:id="@+id/destiny"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/circle"
            android:drawableLeft="@drawable/draw2left"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:hint="@string/text_ciudad_destino"
            android:imeOptions="actionDone"
            android:inputType="textImeMultiLine"
            android:paddingLeft="4dp"
            android:singleLine="true"
            android:textColor="@color/edit_color" />


        <Button
            android:id="@+id/btn_solicitar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_n"
            android:text="@string/btn_ask"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>